fix text wrap in action plans

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -36043,7 +36043,7 @@ html.metro-touch-device .streamer .stream.focused .stream-icon {
   display: none!important;
 }
 .table .data-wrapper {
-  white-space: nowrap;
+  white-space: wrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
@@ -49715,21 +49715,21 @@ body {
 }
 .navview .navview-content {
   padding-top: 52px;
-  background-color: #ECF0F5; 
+  background-color: #ECF0F5;
 }
 .navview .pull-button {
   height: 52px;
   width: 52px;
 }
 .navview .navview-menu {
-  /* background-color: #E1D3D0; */ 
+  /* background-color: #E1D3D0; */
   /* background-color: #FFDDD0; */
-  background-color: #FFFFFF; 
+  background-color: #FFFFFF;
 }
 
 .navview .navview-menu li a:hover {
   color: #000000;
-  background: #c2c2c2; 
+  background: #c2c2c2;
 }
 .navview .navview-menu li.active a {
   color: #111111;
@@ -49754,7 +49754,7 @@ body {
 .navview .suggest-box img.holder {
   width: 32px!important;
   height: auto!important;
-}   
+}
 .navview .navview-menu .navview-menu {
   color: #222;
   background-color: #FFFFFF;
@@ -50202,7 +50202,6 @@ body {
   }
 }
 
-
 pre {
     font-family: -apple-system,system-ui,BlinkMacSystemFont,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif;
     font-size: 1rem;
@@ -50220,6 +50219,7 @@ form {
 }
 
 /*# sourceMappingURL=index.css.map */
+
 @-webkit-keyframes passing-through {
   0% {
     opacity: 0;
